<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addcrafts.AddCraftsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_add_img_crafts"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/designer_white"
            android:src="@drawable/ic_camera"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="5dp"
            app:boxBackgroundColor="@color/designer_white" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_title_crafts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_title"
                android:textColor="@color/brak_brown"
                android:inputType="text"
                android:fontFamily="@font/nunito" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="@color/designer_white" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_desc_crafts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_desc"
                android:textColor="@color/brak_brown"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/nunito"
                android:gravity="top"
                android:lines="5"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/tv_title_material_tool"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="@color/designer_white"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_delete" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_tools"
                android:textColor="@color/brak_brown"
                android:inputType="text"
                android:fontFamily="@font/nunito" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_add_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_plus"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/tv_title_steps"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxBackgroundColor="@color/designer_white"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_delete" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_steps_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_steps"
                android:textColor="@color/brak_brown"
                android:inputType="text"
                android:fontFamily="@font/nunito"
                android:gravity="top"
                android:lines="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_add_img_steps"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start"
            android:background="@color/designer_white"
            android:src="@drawable/ic_camera" />

        <TextView
            android:id="@+id/btn_add_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_plus"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onButtonClick" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>